Update 'go-rdtfwrzp' component image to: quay.io/rhtap_qe/go-rdtfwrzp:8f62f5d0c004e563ae6bc6cd35d47e494d7cc59e@sha256:f50bfe0c9f38430aed816509a003134281cf4faad5be6dd2cd36e9b37e732ee4

--- a/components/go-rdtfwrzp/overlays/development/deployment-patch.yaml
+++ b/components/go-rdtfwrzp/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-rdtfwrzp
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-rdtfwrzp:8f62f5d0c004e563ae6bc6cd35d47e494d7cc59e@sha256:f50bfe0c9f38430aed816509a003134281cf4faad5be6dd2cd36e9b37e732ee4
+          name: container-image
